--- a/.github/workflows/main_gestion-employes-app.yml
+++ b/.github/workflows/main_gestion-employes-app.yml
@@ -1,8 +1,8 @@
 name: Build and deploy PHP app to Azure Web App
 
 env:
-  AZURE_WEBAPP_NAME: gestion-employes-app      # <= put your exact App Service name
-  AZURE_WEBAPP_PACKAGE_PATH: 'backend'
+  AZURE_WEBAPP_NAME: gestion-employes-app        # Web App name in Azure
+  AZURE_WEBAPP_PACKAGE_PATH: 'backend'          # Laravel folder
   PHP_VERSION: '8.2'
 
 on:
@@ -38,15 +38,22 @@ jobs:
     needs: build
 
     steps:
+      - uses: actions/checkout@v4
+
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: php-app
           path: ./
 
+      # NEW: Azure login so webapps-deploy has credentials
+      - name: Azure login
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: .
